anitmt/anitmt-calc/input/adl2/test/error3.adl
scene{
  filename "test.pov";
  scenetype "raw"; //error
  scalar s{
    linear{
      starttime 0; 
    }
  }
}
